nav alignment fixes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,5 @@
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css');
 
-/* Global */
-body {
-  padding: 0 2em 0 0em;
-}
 
 
 
